@@ -37,6 +37,7 @@ import net.sourceforge.kolmafia.modifiers.BooleanModifier;
 import net.sourceforge.kolmafia.modifiers.DerivedModifier;
 import net.sourceforge.kolmafia.modifiers.DoubleModifier;
 import net.sourceforge.kolmafia.modifiers.DoubleModifierCollection;
+import net.sourceforge.kolmafia.modifiers.MultiStringModifier;
 import net.sourceforge.kolmafia.modifiers.StringModifier;
 import net.sourceforge.kolmafia.objectpool.EffectPool;
 import net.sourceforge.kolmafia.objectpool.FamiliarPool;
@@ -57,6 +58,7 @@ import net.sourceforge.kolmafia.session.EquipmentManager;
 import net.sourceforge.kolmafia.session.InventoryManager;
 import net.sourceforge.kolmafia.utilities.StringUtilities;
 
+@SuppressWarnings("incomplete-switch")
 public class Evaluator {
   public boolean failed;
   boolean exceeded;
@@ -70,8 +72,8 @@ public class Evaluator {
   private int raveosity = 0;
   private int surgeonosity = 0;
   private int beeosity = 2;
-  private EnumSet<BooleanModifier> booleanMask = EnumSet.noneOf(BooleanModifier.class);
-  private Set<BooleanModifier> booleanValue = EnumSet.noneOf(BooleanModifier.class);
+  private final EnumSet<BooleanModifier> booleanMask = EnumSet.noneOf(BooleanModifier.class);
+  private final Set<BooleanModifier> booleanValue = EnumSet.noneOf(BooleanModifier.class);
   private final List<FamiliarData> familiars = new ArrayList<>();
   private final List<FamiliarData> carriedFamiliars = new ArrayList<>();
   private int carriedFamiliarsNeeded = 0;
@@ -108,15 +110,7 @@ public class Evaluator {
   private final Map<AdventureResult, Double> bonuses = new HashMap<>();
   private final List<BonusFunction> bonusFunc = new ArrayList<>();
 
-  static class BonusFunction {
-    public final Function<AdventureResult, Double> bonusFunction;
-    public final Double weight;
-
-    public BonusFunction(Function<AdventureResult, Double> bonusFunction, Double weight) {
-      this.bonusFunction = bonusFunction;
-      this.weight = weight;
-    }
-  }
+  record BonusFunction(Function<AdventureResult, Double> bonusFunction, Double weight) {}
 
   private static final Pattern MUS_EXP_PERC_PATTERN =
       Pattern.compile("^mus(cle)? exp(erience)? perc(ent(age)?)?");
@@ -150,7 +144,6 @@ public class Evaluator {
   // otherwise be no suitable weapons to go with that off-hand.
   static final Slot OFFHAND_MELEE = Slot.ACCESSORY2;
   static final Slot OFFHAND_RANGED = Slot.ACCESSORY3;
-  static final Slot WATCHES = Slot.STICKER2;
   static final Slot WEAPON_1H = Slot.STICKER3;
 
   // Slots starting with EquipmentSlot.ALL_SLOTS are equipment
@@ -191,15 +184,12 @@ public class Evaluator {
   }
 
   private static Slot toUseSlot(Slot slot) {
-    Slot useSlot =
-        switch (slot) {
-          case /* Evaluator.OFFHAND_MELEE */ ACCESSORY2, /* Evaluator.OFFHAND_RANGED */
-              ACCESSORY3 -> Slot.OFFHAND;
-          case /* Evaluator.WATCHES */ STICKER2 -> Slot.ACCESSORY1;
-          case /* Evaluator.WEAPON_1H */ STICKER3 -> Slot.WEAPON;
-          default -> slot;
-        };
-    return useSlot;
+    return switch (slot) {
+      case /* Evaluator.OFFHAND_MELEE */ ACCESSORY2, /* Evaluator.OFFHAND_RANGED */
+          ACCESSORY3 -> Slot.OFFHAND;
+      case /* Evaluator.WEAPON_1H */ STICKER3 -> Slot.WEAPON;
+      default -> slot;
+    };
   }
 
   private Evaluator() {
@@ -410,7 +400,7 @@ public class Evaluator {
 
       if (keyword.startsWith("letter")) {
         keyword = keyword.substring(6).trim();
-        if (keyword.equals("")) { // no keyword counts letters
+        if (keyword.isEmpty()) { // no keyword counts letters
           this.bonusFunc.add(new BonusFunction(LetterBonus::letterBonus, weight));
         } else {
           String finalKeyword = keyword;
@@ -431,11 +421,11 @@ public class Evaluator {
           return;
         }
         // Pick a tool that matches your prime stat
-        AdventureResult item = pickPlumberTool(KoLCharacter.getPrimeIndex(), true);
+        AdventureResult item = pickPlumberTool(KoLCharacter.getPrimeIndex());
         if (item == null) {
           // Otherwise, pick best available tool
           // You are guaranteed to have work boots, at least
-          item = pickPlumberTool(-1, true);
+          item = pickPlumberTool(-1);
         }
         this.posEquip.add(item);
         continue;
@@ -447,7 +437,7 @@ public class Evaluator {
           return;
         }
         // Mysticality plumber item
-        AdventureResult item1 = pickPlumberTool(1, true);
+        AdventureResult item1 = pickPlumberTool(1);
         if (item1 == null) {
           KoLmafia.updateDisplay(MafiaState.ERROR, "You don't have an appropriate flower to wield");
           return;
@@ -460,7 +450,7 @@ public class Evaluator {
 
       if (keyword.startsWith("outfit")) {
         keyword = keyword.substring(6).trim();
-        if (keyword.equals("")) { // allow "+outfit" to mean "keep the current outfit on"
+        if (keyword.isEmpty()) { // allow "+outfit" to mean "keep the current outfit on"
           keyword = KoLCharacter.currentStringModifier(StringModifier.OUTFIT);
         }
         SpecialOutfit outfit = EquipmentManager.getMatchingOutfit(keyword);
@@ -543,36 +533,38 @@ public class Evaluator {
 
       // Match keyword with multiple modifiers
       if (index == null) {
-        if (keyword.equals("all resistance")) {
-          this.weight.set(DoubleModifier.COLD_RESISTANCE, weight);
-          this.weight.set(DoubleModifier.HOT_RESISTANCE, weight);
-          this.weight.set(DoubleModifier.SLEAZE_RESISTANCE, weight);
-          this.weight.set(DoubleModifier.SPOOKY_RESISTANCE, weight);
-          this.weight.set(DoubleModifier.STENCH_RESISTANCE, weight);
-          continue;
-        }
-        if (keyword.equals("elemental damage")) {
-          this.weight.set(DoubleModifier.COLD_DAMAGE, weight);
-          this.weight.set(DoubleModifier.HOT_DAMAGE, weight);
-          this.weight.set(DoubleModifier.SLEAZE_DAMAGE, weight);
-          this.weight.set(DoubleModifier.SPOOKY_DAMAGE, weight);
-          this.weight.set(DoubleModifier.STENCH_DAMAGE, weight);
-          continue;
-        }
-        if (keyword.equals("hp regen")) {
-          this.weight.set(DoubleModifier.HP_REGEN_MIN, weight / 2);
-          this.weight.set(DoubleModifier.HP_REGEN_MAX, weight / 2);
-          continue;
-        }
-        if (keyword.equals("mp regen")) {
-          this.weight.set(DoubleModifier.MP_REGEN_MIN, weight / 2);
-          this.weight.set(DoubleModifier.MP_REGEN_MAX, weight / 2);
-          continue;
-        }
-        if (keyword.equals("passive damage")) {
-          this.weight.set(DoubleModifier.DAMAGE_AURA, weight);
-          this.weight.set(DoubleModifier.THORNS, weight);
-          continue;
+        switch (keyword) {
+          case "all resistance" -> {
+            this.weight.set(DoubleModifier.COLD_RESISTANCE, weight);
+            this.weight.set(DoubleModifier.HOT_RESISTANCE, weight);
+            this.weight.set(DoubleModifier.SLEAZE_RESISTANCE, weight);
+            this.weight.set(DoubleModifier.SPOOKY_RESISTANCE, weight);
+            this.weight.set(DoubleModifier.STENCH_RESISTANCE, weight);
+            continue;
+          }
+          case "elemental damage" -> {
+            this.weight.set(DoubleModifier.COLD_DAMAGE, weight);
+            this.weight.set(DoubleModifier.HOT_DAMAGE, weight);
+            this.weight.set(DoubleModifier.SLEAZE_DAMAGE, weight);
+            this.weight.set(DoubleModifier.SPOOKY_DAMAGE, weight);
+            this.weight.set(DoubleModifier.STENCH_DAMAGE, weight);
+            continue;
+          }
+          case "hp regen" -> {
+            this.weight.set(DoubleModifier.HP_REGEN_MIN, weight / 2);
+            this.weight.set(DoubleModifier.HP_REGEN_MAX, weight / 2);
+            continue;
+          }
+          case "mp regen" -> {
+            this.weight.set(DoubleModifier.MP_REGEN_MIN, weight / 2);
+            this.weight.set(DoubleModifier.MP_REGEN_MAX, weight / 2);
+            continue;
+          }
+          case "passive damage" -> {
+            this.weight.set(DoubleModifier.DAMAGE_AURA, weight);
+            this.weight.set(DoubleModifier.THORNS, weight);
+            continue;
+          }
         }
       }
 
@@ -718,7 +710,7 @@ public class Evaluator {
     }
   }
 
-  private AdventureResult pickPlumberTool(int primeIndex, boolean have) {
+  private AdventureResult pickPlumberTool(int primeIndex) {
     AdventureResult hammer = ItemPool.get(ItemPool.HAMMER);
     boolean haveHammer = InventoryManager.hasItem(hammer);
     AdventureResult heavyHammer = ItemPool.get(ItemPool.HEAVY_HAMMER);
@@ -735,13 +727,11 @@ public class Evaluator {
     // Find the best plumber tool
     return switch (primeIndex) {
       case 0 -> // Muscle
-      !have ? heavyHammer : haveHeavyHammer ? heavyHammer : haveHammer ? hammer : null;
+      haveHeavyHammer ? heavyHammer : haveHammer ? hammer : null;
       case 1 -> // Mysticality
-      !have
-          ? bonfireFlower
-          : haveBonfireFlower ? bonfireFlower : haveFireFlower ? fireFlower : null;
+      haveBonfireFlower ? bonfireFlower : haveFireFlower ? fireFlower : null;
       case 2 -> // Moxie
-      !have ? fancyBoots : haveFancyBoots ? fancyBoots : haveWorkBoots ? workBoots : null;
+      haveFancyBoots ? fancyBoots : haveWorkBoots ? workBoots : null;
       default ->
       // If you don't care about stat, pick the best item you own.
       haveHeavyHammer
@@ -889,7 +879,7 @@ public class Evaluator {
       }
     }
     // Add fudge factor for Rollover Effect
-    if (mods.getString(StringModifier.ROLLOVER_EFFECT).length() > 0) {
+    if (!mods.getStrings(MultiStringModifier.ROLLOVER_EFFECT).isEmpty()) {
       score += 0.01f;
     }
     if (score < this.totalMin) this.failed = true;
@@ -914,7 +904,7 @@ public class Evaluator {
       if (osity < this.surgeonosity) this.failed = true;
     }
     if (!this.failed
-        && this.booleanMask.size() != 0
+        && !this.booleanMask.isEmpty()
         && !mods.getBooleans(this.booleanMask).equals(this.booleanValue)) {
       this.failed = true;
     }
@@ -977,7 +967,7 @@ public class Evaluator {
     if (mods == null) return Constraint.IRRELEVANT;
     EnumSet<BooleanModifier> bools = mods.getBooleans(this.booleanMask);
     if (!this.booleanValue.containsAll(bools)) return Constraint.VIOLATES;
-    if (bools.size() != 0) return Constraint.MEETS;
+    if (!bools.isEmpty()) return Constraint.MEETS;
     return Constraint.IRRELEVANT;
   }
 
@@ -1085,51 +1075,18 @@ public class Evaluator {
     int usefulSynergies = 0;
     for (Entry<String, Integer> entry : ModifierDatabase.getSynergies()) {
       Modifiers mods = ModifierDatabase.getModifiers(ModifierType.SYNERGY, entry.getKey());
-      int value = entry.getValue().intValue();
+      int value = entry.getValue();
       if (mods == null) continue;
       double delta = this.getScore(mods) - nullScore;
       if (delta > 0.0) usefulSynergies |= value;
     }
 
-    boolean hoboPowerUseful = false;
-    {
-      Modifiers mods = ModifierDatabase.getModifiers(ModifierType.MAX_CAT, "_hoboPower");
-      if (mods != null && this.getScore(mods) - nullScore > 0.0) {
-        hoboPowerUseful = true;
-      }
-    }
-
-    boolean smithsnessUseful = false;
-    {
-      Modifiers mods = ModifierDatabase.getModifiers(ModifierType.MAX_CAT, "_smithsness");
-      if (mods != null && this.getScore(mods) - nullScore > 0.0) {
-        smithsnessUseful = true;
-      }
-    }
-
-    boolean brimstoneUseful = false;
-    {
-      Modifiers mods = ModifierDatabase.getModifiers(ModifierType.MAX_CAT, "_brimstone");
-      if (mods != null && this.getScore(mods) - nullScore > 0.0) {
-        brimstoneUseful = true;
-      }
-    }
-
-    boolean cloathingUseful = false;
-    {
-      Modifiers mods = ModifierDatabase.getModifiers(ModifierType.MAX_CAT, "_cloathing");
-      if (mods != null && this.getScore(mods) - nullScore > 0.0) {
-        cloathingUseful = true;
-      }
-    }
-
-    boolean slimeHateUseful = false;
-    {
-      Modifiers mods = ModifierDatabase.getModifiers(ModifierType.MAX_CAT, "_slimeHate");
-      if (mods != null && this.getScore(mods) - nullScore > 0.0) {
-        slimeHateUseful = true;
-      }
-    }
+    boolean hoboPowerUseful = isCatUseful(nullScore, "_hoboPower");
+    boolean smithsnessUseful = isCatUseful(nullScore, "_smithsness");
+    boolean brimstoneUseful = isCatUseful(nullScore, "_brimstone");
+    boolean cloathingUseful = isCatUseful(nullScore, "_cloathing");
+    boolean slimeHateUseful = isCatUseful(nullScore, "_slimeHate");
+    boolean mcHugeLargeUseful = isCatUseful(nullScore, "_mcHugeLarge");
 
     // This relies on the special sauce glove having a lower ID
     // than any chefstaff.
@@ -1192,7 +1149,7 @@ public class Evaluator {
         }
 
         if (item.getCount() != 0
-            && (this.getScore(familiarMods) - nullScore > 0.0 || item.automaticFlag == true)) {
+            && (this.getScore(familiarMods) - nullScore > 0.0 || item.automaticFlag)) {
           ranked.get(Slot.FAMILIAR).add(item);
         }
       }
@@ -1228,7 +1185,7 @@ public class Evaluator {
         }
 
         if (item.getCount() != 0
-            && (this.getScore(familiarMods) - nullScore > 0.0 || item.automaticFlag == true)) {
+            && (this.getScore(familiarMods) - nullScore > 0.0 || item.automaticFlag)) {
           ranked.getFamiliar(f).add(item);
         }
       }
@@ -1266,7 +1223,7 @@ public class Evaluator {
               continue;
             }
             String type = EquipmentDatabase.getItemType(id);
-            if (this.weaponType != null && type.indexOf(this.weaponType) == -1) {
+            if (this.weaponType != null && !type.contains(this.weaponType)) {
               continue;
             }
             if (hands == 1) {
@@ -1445,7 +1402,7 @@ public class Evaluator {
 
         boolean wrongClass = false;
         String classType = mods.getString(StringModifier.CLASS);
-        if (classType != "" && !classType.equals(KoLCharacter.getAscensionClassName())) {
+        if (!classType.isEmpty() && !classType.equals(KoLCharacter.getAscensionClassName())) {
           wrongClass = true;
         }
 
@@ -1488,10 +1445,6 @@ public class Evaluator {
           modeablesNeeded.put(modeable, slotWeightings.stream().anyMatch(s -> s >= 0));
         }
 
-        if (mods.getBoolean(BooleanModifier.NONSTACKABLE_WATCH)) {
-          slot = Evaluator.WATCHES;
-        }
-
         if (this.posEquip.contains(item)) {
           item.automaticFlag = true;
           item.requiredFlag = true;
@@ -1511,6 +1464,7 @@ public class Evaluator {
             || (brimstoneUseful && mods.getRawBitmap(BitmapModifier.BRIMSTONE) != 0)
             || (cloathingUseful && mods.getRawBitmap(BitmapModifier.CLOATHING) != 0)
             || (slimeHateUseful && mods.getDouble(DoubleModifier.SLIME_HATES_IT) > 0.0)
+            || (mcHugeLargeUseful && mods.getRawBitmap(BitmapModifier.MCHUGELARGE) != 0)
             || (this.clownosity > 0 && mods.getRawBitmap(BitmapModifier.CLOWNINESS) != 0)
             || (this.raveosity > 0 && mods.getRawBitmap(BitmapModifier.RAVEOSITY) != 0)
             || (this.surgeonosity > 0 && mods.getRawBitmap(BitmapModifier.SURGEONOSITY) != 0)
@@ -1540,7 +1494,7 @@ public class Evaluator {
         }
 
         String intrinsic = mods.getString(StringModifier.INTRINSIC_EFFECT);
-        if (intrinsic.length() > 0) {
+        if (!intrinsic.isEmpty()) {
           Modifiers newMods = new Modifiers();
           newMods.add(mods);
           newMods.add(ModifierDatabase.getModifiers(ModifierType.EFFECT, intrinsic));
@@ -1822,7 +1776,7 @@ public class Evaluator {
     // Compare synergies with best items in the same spots, and remove automatic flag if not better
     for (Entry<String, Integer> entry : ModifierDatabase.getSynergies()) {
       String synergy = entry.getKey();
-      int mask = entry.getValue().intValue();
+      int mask = entry.getValue();
       int index = synergy.indexOf("/");
       String itemName1 = synergy.substring(0, index);
       String itemName2 = synergy.substring(index + 1);
@@ -1964,9 +1918,9 @@ public class Evaluator {
     // things.
     int count = 0;
     while (count < 2) {
-      int itemId1 = -1;
-      int itemId2 = -1;
-      int itemId3 = -1;
+      int itemId1;
+      int itemId2;
+      int itemId3;
       CheckedItem item1 = null;
       CheckedItem item2 = null;
       CheckedItem item3 = null;
@@ -1976,13 +1930,12 @@ public class Evaluator {
         itemId1 = ItemPool.MONSTROUS_MONOCLE;
         itemId2 = ItemPool.MUSTY_MOCCASINS;
         itemId3 = ItemPool.MOLTEN_MEDALLION;
-        count++;
       } else {
         itemId1 = ItemPool.BRAZEN_BRACELET;
         itemId2 = ItemPool.BITTER_BOWTIE;
         itemId3 = ItemPool.BEWITCHING_BOOTS;
-        count++;
       }
+      count++;
 
       ListIterator<MaximizerSpeculation> sI =
           speculationList.get(slot).listIterator(speculationList.get(slot).size());
@@ -2175,7 +2128,8 @@ public class Evaluator {
               if (checkItemList != null) {
                 for (CheckedItem checkItem : checkItemList) {
                   FoldGroup checkGroup = ItemDatabase.getFoldGroup(checkItem.getName());
-                  if (checkGroup != null && group.names.get(0).equals(checkGroup.names.get(0))) {
+                  if (checkGroup != null
+                      && group.names.getFirst().equals(checkGroup.names.getFirst())) {
                     foldItemsNeeded += Math.max(checkItem.getCount(), this.maxUseful(checkSlot));
                   }
                 }
@@ -2193,7 +2147,8 @@ public class Evaluator {
                 while (checkIterator.hasPrevious()) {
                   CheckedItem checkItem = checkIterator.previous().attachment;
                   FoldGroup checkGroup = ItemDatabase.getFoldGroup(checkItem.getName());
-                  if (checkGroup != null && group.names.get(0).equals(checkGroup.names.get(0))) {
+                  if (checkGroup != null
+                      && group.names.getFirst().equals(checkGroup.names.getFirst())) {
                     if (usefulCheckCount > 0 || checkItem.requiredFlag) {
                       foldItemsNeeded += Math.max(checkItem.getCount(), this.maxUseful(checkSlot));
                     }
@@ -2248,7 +2203,7 @@ public class Evaluator {
 
       // Blunt object fix for only having a foldable that might be needed elsewhere
       if (automaticEntry.size() == 1
-          && ItemDatabase.getFoldGroup(automaticEntry.get(0).getName()) != null) {
+          && ItemDatabase.getFoldGroup(automaticEntry.getFirst().getName()) != null) {
         automaticEntry.add(new CheckedItem(-1, equipScope, maxPrice, priceLevel));
       }
 
@@ -2257,7 +2212,6 @@ public class Evaluator {
       }
     }
 
-    automatic.get(Slot.ACCESSORY1).addAll(automatic.get(Evaluator.WATCHES));
     automatic.get(Slot.WEAPON).addAll(automatic.get(Evaluator.WEAPON_1H));
     automatic.get(Evaluator.OFFHAND_MELEE).addAll(automatic.get(Slot.OFFHAND));
     automatic.get(Evaluator.OFFHAND_RANGED).addAll(automatic.get(Slot.OFFHAND));
@@ -2320,6 +2274,11 @@ public class Evaluator {
         useCard,
         useCrownFamiliar,
         useBjornFamiliar);
+  }
+
+  private boolean isCatUseful(double nullScore, String catName) {
+    Modifiers mods = ModifierDatabase.getModifiers(ModifierType.MAX_CAT, catName);
+    return mods != null && this.getScore(mods) - nullScore > 0.0;
   }
 
   private Slot jumpAccessories(Slot base, int jumpIfFromStart) {
